HFP-2271 Align context menu correctly

--- a/styles/cp-editor.css
+++ b/styles/cp-editor.css
@@ -1,13 +1,6 @@
-.libwrap.h5p-coursepresentation-editor {
-  margin-top: 55px;
-}
-
 .h5peditor-form .field.coursepresentation {
   position: relative;
-}
-
-.h5p-course-presentation {
-  margin-top: 4%;
+  margin-top: 6%;
 }
 
 .h5p-course-presentation .h5p-wrapper {
